設定ファイルに不正な列のスキップ数の追加、SQLは重複対応の実施

--- a/settings/SOO_item/config.json
+++ b/settings/SOO_item/config.json
@@ -1,6 +1,6 @@
 {
 	"destinationTable": {
-	"datasetId": "pos_analysis",
+	"datasetId": "looker",
 	"tableId": "SOO_item"
 	},
 	"sourceFormat": "CSV",
@@ -9,7 +9,7 @@
 	"writeDisposition": "WRITE_TRUNCATE",
 	"skipLeadingRows": "0",
 	"encoding": "UTF-8",
-	"maxBadRecords": "0",
+	"maxBadRecords": "70",
 	"allowQuotedNewlines": "true",
 	"allowJaggedRows": "true",
 	"ignoreUnknownValues": "true",
