--- a/create_jbtob_dwh_etl.yaml
+++ b/create_jbtob_dwh_etl.yaml
@@ -245,7 +245,8 @@ steps:
     --data_source=scheduled_query \
     --params='{"query": "CALL looker_procedure.scripting_procedure();"}' \
     --schedule="everyday 22:00" \
-    --location=US 
+    --location=US \
+    --service_account_name=bq-scheduled-query-$(cat _ENV)@jbtob-looker-$(cat _JBTOB_PROJECT_NAME)-$(cat _ENV).iam.gserviceaccount.com
 
 # Scheduled Queryのcreate_pos_data_retry1(scripting_retry_procedure.sql)をデプロイ
 - name: 'gcr.io/cloud-builders/gcloud'
@@ -259,7 +260,8 @@ steps:
     --data_source=scheduled_query \
     --params='{"query": "CALL looker_procedure.scripting_retry_procedure();"}' \
     --schedule="everyday 22:40" \
-    --location=US 
+    --location=US \
+    --service_account_name=bq-scheduled-query-$(cat _ENV)@jbtob-looker-$(cat _JBTOB_PROJECT_NAME)-$(cat _ENV).iam.gserviceaccount.com
 
 # Scheduled Queryのcreate_pos_data_retry2(scripting_retry_procedure.sql)をデプロイ
 - name: 'gcr.io/cloud-builders/gcloud'
@@ -273,7 +275,8 @@ steps:
     --data_source=scheduled_query \
     --params='{"query": "CALL looker_procedure.scripting_retry_procedure();"}' \
     --schedule="everyday 23:20" \
-    --location=US 
+    --location=US \
+    --service_account_name=bq-scheduled-query-$(cat _ENV)@jbtob-looker-$(cat _JBTOB_PROJECT_NAME)-$(cat _ENV).iam.gserviceaccount.com
 
 # Scheduled Queryのdelete_transaction_source_monthly(delete_old_data_monthly.sql)をデプロイ
 - name: 'gcr.io/cloud-builders/gcloud'
@@ -287,7 +290,8 @@ steps:
     --data_source=scheduled_query \
     --params='{"query": "CALL looker_procedure.delete_old_data_monthly();"}' \
     --schedule="first day of month 18:00" \
-    --location=US 
+    --location=US \
+    --service_account_name=bq-scheduled-query-$(cat _ENV)@jbtob-looker-$(cat _JBTOB_PROJECT_NAME)-$(cat _ENV).iam.gserviceaccount.com
 
 options:
   env: [PYTHONIOENCODING=utf-8]
